[package]
name = "uuid_spoofer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
core-foundation-sys = "0.8"
ctor = "0.2"

# For fishhook. We might need to be more specific or add custom bindings.
# Let's try with a common fishhook crate first. If not, we'll use the one from example or create bindings.
# After some research, there isn't a direct, well-maintained fishhook crate that exposes `rebind_symbols` easily for this exact use case.
# The `example-project` includes `fishhook.c` and `fishhook.h` directly.
# We will do the same: include fishhook.c and fishhook.h from the example project and build it.
# For now, let's set up the rest and address fishhook compilation shortly.

[build-dependencies]
cc = "1.0" # For compiling C code (fishhook.c)

[[bin]]
name = "uuid_reader"
path = "src/bin/uuid_reader.rs"
